@@ -269,6 +269,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon   BJC S520   (EXPERIMENTAL)
        Canon   BJC S530D  (EXPERIMENTAL)
        Canon   BJC S630   (EXPERIMENTAL)
+       Canon   BJC S750   (EXPERIMENTAL)
        Canon PIXMA i50    (EXPERIMENTAL)
        Canon PIXMA i70    (EXPERIMENTAL)
        Canon PIXMA i250   (EXPERIMENTAL)
